@@ -1,3 +1,14 @@
+2011-12-16  Rafael Brandao  <rafael.lobo@openbossa.org>
+
+        Remove unused variable after r74747 (buildfix)
+        https://bugs.webkit.org/show_bug.cgi?id=74767
+
+        Reviewed by Darin Adler.
+
+        * dfg/DFGSpeculativeJIT.cpp:
+        (JSC::DFG::SpeculativeJIT::compilePutByValForByteArray):
+        (JSC::DFG::SpeculativeJIT::compilePutByValForIntTypedArray):
+
 2011-12-16  Gavin Barraclough  <barraclough@apple.com>
 
         Reverted r103120, this breaks v8 on ARMv7 DFG.
